// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvoBar Renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      {
        "alignSelf": "stretch",
        "backgroundColor": "#E3E3E3",
        "height": 1,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 52,
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/img/tick.png",
        }
      }
      style={
        {
          "height": 16,
          "margin": 16,
          "resizeMode": "contain",
          "width": 16,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 8,
              "fontWeight": "bold",
              "textAlignVertical": "center",
            },
            {
              "color": "#666666",
            },
          ]
        }
      >
        0:0:0.0
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlignVertical": "center",
            },
            {
              "color": "#000000",
            },
          ]
        }
      >
        test-name
      </Text>
    </View>
    <Image
      source={
        {
          "testUri": "../../../src/img/drag_handle_dark.png",
        }
      }
      style={
        {
          "height": 16,
          "margin": 16,
          "resizeMode": "contain",
          "width": 16,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignSelf": "stretch",
        "backgroundColor": "#E3E3E3",
        "height": 1,
      }
    }
  />
</View>
`;

exports[`AvoBar Renders correctly with error 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
      },
      {
        "backgroundColor": "#D94553",
      },
    ]
  }
>
  <View
    style={
      {
        "alignSelf": "stretch",
        "backgroundColor": "#E3E3E3",
        "height": 1,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 52,
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/img/warning.png",
        }
      }
      style={
        {
          "height": 16,
          "margin": 16,
          "resizeMode": "contain",
          "width": 16,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 8,
              "fontWeight": "bold",
              "textAlignVertical": "center",
            },
            {
              "color": "#DDDDDD",
            },
          ]
        }
      >
        0:0:0.0
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlignVertical": "center",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        test-name
      </Text>
    </View>
    <Image
      source={
        {
          "testUri": "../../../src/img/drag_handle_light.png",
        }
      }
      style={
        {
          "height": 16,
          "margin": 16,
          "resizeMode": "contain",
          "width": 16,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignSelf": "stretch",
        "backgroundColor": "#E3E3E3",
        "height": 1,
      }
    }
  />
</View>
`;

exports[`AvoBar Renders correctly without props set 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      {
        "alignSelf": "stretch",
        "backgroundColor": "#E3E3E3",
        "height": 1,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 52,
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/img/tick.png",
        }
      }
      style={
        {
          "height": 16,
          "margin": 16,
          "resizeMode": "contain",
          "width": 16,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 8,
              "fontWeight": "bold",
              "textAlignVertical": "center",
            },
            {
              "color": "#666666",
            },
          ]
        }
      >
        NaN:NaN:NaN.NaN
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlignVertical": "center",
            },
            {
              "color": "#000000",
            },
          ]
        }
      />
    </View>
    <Image
      source={
        {
          "testUri": "../../../src/img/drag_handle_dark.png",
        }
      }
      style={
        {
          "height": 16,
          "margin": 16,
          "resizeMode": "contain",
          "width": 16,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignSelf": "stretch",
        "backgroundColor": "#E3E3E3",
        "height": 1,
      }
    }
  />
</View>
`;
